// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ControlButton should render 1`] = `
<DocumentFragment>
  <div
    class="group"
  >
    <button
      class="ring-focus css-1wz6bm9"
    />
  </div>
</DocumentFragment>
`;

exports[`ControlButton should render active 1`] = `
<DocumentFragment>
  <div
    class="group"
  >
    <button
      class="ring-focus css-1wz6bm9"
    />
  </div>
</DocumentFragment>
`;

exports[`ControlButton should render disabled 1`] = `
<DocumentFragment>
  <div
    class="group"
  >
    <button
      class="ring-focus css-rt9rr4"
      disabled=""
    />
  </div>
</DocumentFragment>
`;

exports[`ControlButton should render with dot 1`] = `
<DocumentFragment>
  <div
    class="group"
  >
    <button
      class="ring-focus css-1wz6bm9"
    >
      <div
        class="absolute top-0.5 right-1 flex h-3 w-3 items-center justify-center rounded-full bg-theme-background transition-all duration-100 ease-linear"
      >
        <div
          class="h-2 w-2 rounded-full bg-theme-primary-500"
        />
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`ControlButton should render without border 1`] = `
<DocumentFragment>
  <div
    class="group"
  >
    <button
      class="ring-focus css-m64h4t"
    />
  </div>
</DocumentFragment>
`;

exports[`ControlButton should render without border and with dot 1`] = `
<DocumentFragment>
  <div
    class="group"
  >
    <button
      class="ring-focus css-m64h4t"
    >
      <div
        class="absolute top-0.5 right-1 flex h-3 w-3 items-center justify-center rounded-full bg-theme-background transition-all duration-100 ease-linear -mr-2.5"
      >
        <div
          class="h-2 w-2 rounded-full bg-theme-primary-500"
        />
      </div>
    </button>
  </div>
</DocumentFragment>
`;
